--- a/love.html
+++ b/love.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>i love you</title>
-    <link rel="stylesheet" href="/website/css/style1.css" />
+    <link rel="stylesheet" href="/css/style1.css" />
   </head>
   <body>
     <div class="title">
