--- a/CPU.html
+++ b/CPU.html
@@ -6,7 +6,7 @@
   <title>CPU</title>
   <link rel="stylesheet" href="css/style2.css">
 </head>
-<body>
+<body style="background-color: purple;">
   <div class="title">
     CPU or in other words Central Processing Unit
   </div>
